# steambuddy-parent/steambuddy-api/src/main/java/org/steambuddy/api/dto/UserDTO.java
@@ -1,0 +1,46 @@
+package org.steambuddy.api.dto;
+
+import java.util.Set;
+
+public class UserDTO {
+
+	private Long id;	
+	private String name;
+	private String password;
+	private Set<UserDTO> friends;
+		
+	public UserDTO(Long id, String name, String password, Set<UserDTO> friends) {
+		this.id = id;
+		this.name = name;
+		this.password = password;
+		this.friends = friends;
+	}
+	
+	public UserDTO() {}
+	
+	public Long getId() {
+		return id;
+	}
+	public void setId(Long id) {
+		this.id = id;
+	}
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public String getPassword() {
+		return password;
+	}
+	public void setPassword(String password) {
+		this.password = password;
+	}
+	public Set<UserDTO> getFriends() {
+		return friends;
+	}
+	public void setFriends(Set<UserDTO> friends) {
+		this.friends = friends;
+	}
+	
+}
