# steambuddy-parent/steambuddy-app/src/main/java/org/steambuddy/app/entity/UserEntity.java
@@ -1,0 +1,70 @@
+package org.steambuddy.app.entity;
+
+import java.util.Set;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.FetchType;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinTable;
+import javax.persistence.ManyToMany;
+import javax.persistence.Table;
+
+@Entity
+@Table(name = "user")
+public class UserEntity {
+
+	@Id
+	@GeneratedValue(strategy = GenerationType.IDENTITY)
+	private Long id;	
+	
+	@Column(name = "name")
+	private String name;
+	
+	@Column(name = "password")
+	private String password;
+	
+	@ManyToMany(fetch = FetchType.LAZY)
+	@JoinTable(name = "friend", joinColumns = {
+			@JoinColumn(name  = "friendLeft", referencedColumnName = "id",  nullable = false)}, inverseJoinColumns = {
+		    @JoinColumn(name  = "friendRight", referencedColumnName = "id",  nullable = false)})
+	private Set<UserEntity> friends;
+		
+	public UserEntity(Long id, String name, String password, Set<UserEntity> friends) {
+		this.id = id;
+		this.name = name;
+		this.password = password;
+		this.friends = friends;
+	}
+	
+	public UserEntity() {};
+	
+	public Long getId() {
+		return id;
+	}
+	public void setId(Long id) {
+		this.id = id;
+	}
+	public String getName() {
+		return name;
+	}
+	public void setName(String name) {
+		this.name = name;
+	}
+	public String getPassword() {
+		return password;
+	}
+	public void setPassword(String password) {
+		this.password = password;
+	}
+	public Set<UserEntity> getFriends() {
+		return friends;
+	}
+	public void setFriends(Set<UserEntity> friends) {
+		this.friends = friends;
+	}
+	
+}
