# web/src/assets/swagger/swagger-steambuddy.json
@@ -6,6 +6,8 @@
   },
   "tags" : [ {
     "name" : "GameResource"
+  }, {
+    "name" : "UserResource"
   } ],
   "paths" : {
     "internal/api/game/games" : {
@@ -22,6 +24,78 @@
               "items" : {
                 "$ref" : "#/definitions/GameDTO"
               }
+            }
+          }
+        }
+      }
+    },
+    "internal/api/user/authenticate" : {
+      "put" : {
+        "tags" : [ "UserResource" ],
+        "summary" : "Authenticate a user.",
+        "description" : "Returns the logged in User.",
+        "operationId" : "authenticateUser",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/UserDTO"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/UserDTO"
+            }
+          }
+        }
+      }
+    },
+    "internal/api/user/register" : {
+      "post" : {
+        "tags" : [ "UserResource" ],
+        "summary" : "Register a new user.",
+        "description" : "Returns the created User.",
+        "operationId" : "registerUser",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/UserDTO"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/UserDTO"
+            }
+          }
+        }
+      }
+    },
+    "internal/api/user/update" : {
+      "put" : {
+        "tags" : [ "UserResource" ],
+        "summary" : "Update a user.",
+        "description" : "Returns the updated User.",
+        "operationId" : "updateUser",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "$ref" : "#/definitions/UserDTO"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/UserDTO"
             }
           }
         }
@@ -48,6 +122,28 @@
         },
         "text" : {
           "type" : "string"
+        }
+      }
+    },
+    "UserDTO" : {
+      "type" : "object",
+      "properties" : {
+        "id" : {
+          "type" : "integer",
+          "format" : "int64"
+        },
+        "name" : {
+          "type" : "string"
+        },
+        "password" : {
+          "type" : "string"
+        },
+        "friends" : {
+          "type" : "array",
+          "uniqueItems" : true,
+          "items" : {
+            "$ref" : "#/definitions/UserDTO"
+          }
         }
       }
     }
